edit: synchronized the '!holiday' command with the last command changes